external-crates/move/crates/move-compiler/tests/move_check/expansion/standalone_mname_with_type_args.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E03006]: unexpected name in this position
  ┌─ tests/move_check/expansion/standalone_mname_with_type_args.move:3:21
  │
3 │         let _ = 0 + M<u64>;
  │                     ^^^^^^ Expected name to be followed by a brace-enclosed list of field expressions or a parenthesized list of arguments for a function call
